Fix Prejoin camera not visible (#229)
* refactor prejoin, fix cam not being released

* changeset

* fix log messages

* change workflow order

* fix lint

* typo

--- a/packages/styles/scss/prefab-components/_prejoin.scss
+++ b/packages/styles/scss/prefab-components/_prejoin.scss
@@ -7,20 +7,33 @@
   margin-inline: auto;
   background-color: var(--bg);
 
-  video {
-    display: block;
-    width: 480px;
-    max-width: 100%;
-    height: auto;
-    transform: rotateY(180deg);
-    border-radius: var(--lk-border-radius);
-  }
+  .video-container {
+    position: relative;
+    video,
+    .camera-off-note {
+      display: block;
+      width: 480px;
+      max-width: 100%;
+      aspect-ratio: 16 / 10;
+      height: auto;
+      background-color: #000;
+      border-radius: var(--lk-border-radius);
+    }
 
-  .camera-off-note {
-    width: 100%;
-    height: 11.25rem;
-    background-color: #000;
-    border-radius: var(--lk-border-radius);
+    video {
+      transform: rotateY(180deg);
+    }
+
+    .camera-off-note {
+      position: absolute;
+      top: 0;
+      display: grid;
+      place-items: center;
+      & > * {
+        height: 100%;
+        max-width: 100%;
+      }
+    }
   }
 
   .audio-container {
